feat: add personal Elevation Bank experience
